--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 				</div>
 			</div>
 		</div>
+		<script src="js/music_list.js"></script>
 		<script src="js/script.js"></script>
 	</body>
 </html>
