music player basic finish

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				</div>
 				<div class="m-progress">
 					<div class="bar">
-						<audio src="songs/Alone.mp3" id="main-audio"></audio>
+						<audio src="" id="main-audio"></audio>
 					</div>
 					<div class="timer">
 						<span class="current">0:00</span>
