--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 					</div>
 					<div class="m-etc">
 						<span id="list-btn" class="material-symbols-rounded">queue_music</span>
+						<div id="play-list">
+							<ul></ul>
+						</div>
 						<span id="favorite-btn" class="material-symbols-rounded">favorite</span>
 						<div class="volume">
 							<span id="volume-btn" class="material-symbols-rounded">volume_up</span><!--volume_down, volume_up, volume_off-->
