--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
 						<div class="volume">
 							<span id="volume-btn" class="material-symbols-rounded">volume_up</span><!--volume_down, volume_up, volume_off-->
 							<div id="volume-ctrl" class="hidden">
-								<div class="slider" data-direction="horizontal">
-									<div class="prog">
-										<div class="pin" data-method="rewind"></div>
-									</div>
+								<div class="volumebg">
+									<span class="bar"></span>
+									<input type='range' min='0.01' max='1' value='1' step='0.01' class="volumerange"/>
 								</div>
 							</div>
 						</div>
@@ -47,6 +46,7 @@
 					</div>
 					<div class="m-progress">
 						<div class="bar">
+							<span class="pin"></span>
 							<audio src="" id="main-audio"></audio>
 						</div>
 						<div class="timer">
